# qtMvpDemo

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  PageFactory.cpp  PageFactory.h  PageFactoryImpl.cpp  PageFactoryImpl.h  README.md  main.cpp
data/: DeviceData.h
devices/: IDevice.h  SerialDevice.h
pages/: DataVisView.h  DownloadView.h  WebSocketView.h
parser/: ProtocolParser.h
presenter/: DataVisPresenter.h  DownloadPresenter.h  WebSocketPresenter.h
service/: DataVisService.h  DownloadService.h  WebSocketService.h
